Se creo la pagina principal
Se creo la pagina principal y se comenzo con la formacion de la misma

--- a/Frontend en Angular/library_ispc/src/app/pages/login/login.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="col-4 m-0 p-0"></div>
         <div class="col-2"></div>
         <div class="col-4 align-items-center ">
-            <form class=" loginform w-75">
+            <form class=" loginform w-75" action="http://localhost:4200/home">
                 <h1 class="h1 mb-5 fw-bold">Login</h1>
             
                 <div class="input-group">
@@ -28,7 +28,7 @@
                   </div>
                   <a href="#" class="d-flex justify-content-end text-black">Olvido su contraseña</a>
                 </div>
-                <button class="w-100 btn btn-lg btncolor" type="submit">Login</button>
+                <button class="w-100 btn btn-lg btncolor" type="submit" >Login</button>
               </form>
 
               <label for="" class="text-black createaccount">Crear una cuenta</label>
