--- a/Frontend en Angular/library_ispc/src/app/pages/login/login.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/login/login.component.html
@@ -1,39 +1,45 @@
 <div class="container-fluid m-0 p-0 contentpage bgimg">
-    <div class="row m-0 p-0">
-        <div class="col-4 m-0 p-0"></div>
-        <div class="col-2"></div>
-        <div class="col-4 align-items-center ">
-            <form class=" loginform w-75" action="http://localhost:4200/home">
-                <h1 class="h1 mb-5 fw-bold">Login</h1>
-            
-                <div class="input-group">
-                  <span class="input-group-text inputcolor" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                  </svg></span>
-                  <input type="text" class="form-control mb-3  inputcolor" id="floatingInput" placeholder="Usuario" aria-describedby="basic-addon1">
-                </div>
+  <div class="row m-0 p-0">
+    <div class="col-4 m-0 p-0"></div>
+    <div class="col-2"></div>
+    <div class="col-4 align-items-center ">
+      <form class=" loginform w-75" action="http://localhost:4200/home">
+        <h1 class="h1 mb-5 fw-bold">Login</h1>
 
-
-                <div class="input-group">
-                  <span class="input-group-text inputcolor" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
-                    <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/>
-                  </svg></span>
-                  <input type="password" class="form-control mb-4   inputcolor" id="floatingInput" placeholder="Contraseña" >
-                </div>
-            
-                <div class="checkbox m-4 ">
-                  <div class="form-check form-switch position-absolute">
-                    <input class="form-check-input perilla" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Recuerdame</label>
-                  </div>
-                  <a href="#" class="d-flex justify-content-end text-black">Olvido su contraseña</a>
-                </div>
-                <button class="w-100 btn btn-lg btncolor" type="submit" >Login</button>
-              </form>
-
-              <label for="" class="text-black createaccount">Crear una cuenta</label>
-
+        <div class="input-group">
+          <span class="input-group-text inputcolor" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+              height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+              <path
+                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+            </svg></span>
+          <input type="text" class="form-control mb-3  inputcolor" id="floatingInput" placeholder="Usuario"
+            aria-describedby="basic-addon1" #inputUsuario>
         </div>
-        <div class="col-2"></div>
-</div>
 
+
+        <div class="input-group">
+          <span class="input-group-text inputcolor" id="basic-addon1"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+              height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16">
+              <path
+                d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z" />
+            </svg></span>
+          <input type="password" class="form-control mb-4   inputcolor" id="floatingInput" placeholder="Contraseña"
+            #inputContra>
+        </div>
+
+        <div class="checkbox m-4 ">
+          <div class="form-check form-switch position-absolute">
+            <input class="form-check-input perilla" type="checkbox" role="switch" id="flexSwitchCheckDefault" checked>
+            <label class="form-check-label" for="flexSwitchCheckDefault">Recuerdame</label>
+          </div>
+          <a href="#" class="d-flex justify-content-end text-black">Olvido su contraseña</a>
+        </div>
+        <button class="w-100 btn btn-lg btncolor" type="button"
+          (click)="logueo(inputUsuario.value, inputContra.value)">Login</button>
+      </form>
+
+      <label for="" class="text-black createaccount">Crear una cuenta</label>
+
+    </div>
+    <div class="col-2"></div>
+  </div>
