--- a/Frontend en Angular/library_ispc/src/app/pages/home/home.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/home/home.component.html
@@ -11,7 +11,37 @@
         </div>
         <div class="col-6"><img class=" p-0" src="/assets/img/imghome.png" alt="libroshome" height="980px" width="1000px"></div>
         <div class="col-4">
-
+            <div class="titulohome">
+                <h1>BIENVENIDOS</h1>
+                <h1 class="txtbiblioteca">Biblioteca</h1>
+                <h1 class="txtonline">ONLINE</h1>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <label for="" class="slide">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi, laborum, voluptas corrupti dolore praesentium fugit, dolorem ab cumque alias ex unde! Nostrum sit quia vitae nemo fugit et aliquam.</label>
+                  </div>
+                  <div class="carousel-item ">
+                    <label for="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi, laborum, voluptas corrupti dolore praesentium fugit, dolorem ab cumque alias ex unde! Nostrum sit quia vitae nemo fugit et aliquam.</label>
+                  </div>
+                  <div class="carousel-item">
+                    <label for="">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam excepturi, laborum, voluptas corrupti dolore praesentium fugit, dolorem ab cumque alias ex unde! Nostrum sit quia vitae nemo fugit et aliquam.</label>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </div>
     </div>
 </div>
