--- a/Frontend en Angular/library_ispc/src/app/pages/home/home.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/home/home.component.html
@@ -34,14 +34,13 @@
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">          
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+              <button class="btn btn-warning botonhome">Ver mas</button>
         </div>
     </div>
 </div>
