--- a/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
@@ -3,7 +3,7 @@
     <div class="col-2">
       <ul class="listmenu">
         <li><a href="http://localhost:4200/home">Principal</a></li>
-        <li><a href="">Libros Disponibles</a></li>
+        <li><a href="http://localhost:4200/librosDisponibles">Libros Disponibles</a></li>
         <li><a href="">Mis reservas</a></li>
         <li><a href="">Nosotros</a></li>
         <li><a href="">Soporte</a></li>
