Cambios en la page Libros Disponibles
Cambios en la page Libros Disponibles

--- a/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
@@ -9,14 +9,11 @@
         <li><a href="">Soporte</a></li>
       </ul>
     </div>
-    <div class="col-4">
-      <img class=" p-0" src="/assets/img/imghome.png" alt="libroshome" height="580px">
-    </div>
-    <div class="col-6">
+    <div class="col-1"></div>
+    <div class="col-9">
       <div class="titulohome">
-        <h1>BIENVENIDOS</h1>
-        <h1 class="txtbiblioteca">Biblioteca</h1>
-        <h1 class="txtonline">ONLINE</h1>
+        <h1 class="txtbiblioteca">Libros</h1>
+        <h1 class="txtonline">DISPONIBLES</h1>
       </div>
       <table class="table">
         <thead>
