Se hizo la pagina de nosotros, mis reservas y se agrego el logo del proyecto
Se hizo la pagina de nosotros, mis reservas y se agrego el logo del proyecto

--- a/Frontend en Angular/library_ispc/src/app/pages/nosotros/nosotros.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/nosotros/nosotros.component.html
@@ -1,20 +1,19 @@
-<div class="container-fluid bghome">
+<div class="container-fluid bgabout">
     <div class="row">
         <div class="col-2">
-            <ul class="listmenu">
-                <li><a [routerLink]="['/home']">Principal</a></li>
-                <li><a [routerLink]="['/librosDisponibles']">Libros Disponibles</a></li>
-                <li><a [routerLink]="['/misreservas']">Mis reservas</a></li>
-                <li><a [routerLink]="['/nosotros']">Nosotros</a></li>
-                <li><a [routerLink]="['/home']">Soporte</a></li>
-            </ul>
+          <ul class="listmenu">
+            <li><a [routerLink]="['/home']">Principal</a></li>
+            <li><a [routerLink]="['/librosDisponibles']">Libros Disponibles</a></li>
+            <li><a [routerLink]="['/misreservas']">Mis reservas</a></li>
+            <li><a [routerLink]="['/nosotros']">Nosotros</a></li>
+            <li><a [routerLink]="['/home']">Soporte</a></li>
+        </ul>
         </div>
-        <div class="col-6"><img class=" p-0" src="/assets/img/imghome.png" alt="libroshome" height="980px" width="1000px"></div>
+        <div class="col-6"><img class=" p-0" src="../../../assets/img/members.png" alt="libroshome" height="980px" width="920px"></div>
         <div class="col-4">
             <div class="titulohome">
-                <h1>BIENVENIDOS</h1>
-                <h1 class="txtbiblioteca">Biblioteca</h1>
-                <h1 class="txtonline">ONLINE</h1>
+                <h1>SOBRE</h1>
+                <h1 class="txtbiblioteca">Nosotros</h1>
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
