--- a/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="col-2">
       <ul class="listmenu">
-        <li><a href="http://localhost:4200/home">Principal</a></li>
-        <li><a href="http://localhost:4200/librosDisponibles">Libros Disponibles</a></li>
-        <li><a href="">Mis reservas</a></li>
-        <li><a href="">Nosotros</a></li>
-        <li><a href="">Soporte</a></li>
-      </ul>
+        <li><a [routerLink]="['/home']">Principal</a></li>
+        <li><a [routerLink]="['/librosDisponibles']">Libros Disponibles</a></li>
+        <li><a [routerLink]="['/misreservas']">Mis reservas</a></li>
+        <li><a [routerLink]="['/nosotros']">Nosotros</a></li>
+        <li><a [routerLink]="['/home']">Soporte</a></li>
+    </ul>
     </div>
     <div class="col-1"></div>
     <div class="col-9">
