--- a/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/catalogo/librosDisponibles/librosDisponibles.component.html
@@ -7,15 +7,15 @@
         <li><a [routerLink]="['/misreservas']">Mis reservas</a></li>
         <li><a [routerLink]="['/nosotros']">Nosotros</a></li>
         <li><a [routerLink]="['/home']">Soporte</a></li>
-    </ul>
+      </ul>
     </div>
-    <div class="col-1"></div>
-    <div class="col-9">
+    <div class="col-2"></div>
+    <div class="col-8">
       <div class="titulohome">
         <h1 class="txtbiblioteca">Libros</h1>
         <h1 class="txtonline">DISPONIBLES</h1>
       </div>
-      <table class="table">
+      <table class="table text-white">
         <thead>
           <tr>
             <th scope="col">#</th>
