--- a/Frontend en Angular/library_ispc/src/app/pages/misreservas/misreservas.component.html
+++ b/Frontend en Angular/library_ispc/src/app/pages/misreservas/misreservas.component.html
@@ -9,13 +9,13 @@
         <li><a [routerLink]="['/home']">Soporte</a></li>
       </ul>
     </div>
-    <div class="col-1"></div>
-    <div class="col-9">
+    <div class="col-2"></div>
+    <div class="col-8">
       <div class="titulohome">
         <h1 class="txtbiblioteca">Mis</h1>
         <h1 class="txtonline">RESERVAS</h1>
       </div>
-      <table class="table">
+      <table class="table text-white">
         <thead>
           <tr>
             <th scope="col">Id Libro</th>
